--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,12 +1,7 @@
 name: Android CI
 
 on:
-  pull_request:
-  push:
-    branches:
-    - 'master'
-    - '4.**'
-    - '5.**'
+  workflow_dispatch:
 
 jobs:
   build:
